转换文件编码

--- a/config-repo/env-dev.yml
+++ b/config-repo/env-dev.yml
@@ -2,11 +2,11 @@ from: git-dev-1.0
 zuul:
   routes:
     client-1:
-      # ?:Æ¥ÅäÈÎÒâµ¥¸öÊıÁ¿×Ö·û£»*£ºÆ¥ÅäÈÎÒâ¶à¸öÊıÁ¿×Ö·û£»**£ºÆ¥ÅäÈÎÒâ¶à¸öÊıÁ¿×Ö·û£¬Ö§³Ö¶à¼¶Ä¿Â¼
-      # Ê¹ÓÃ url µÄÅäÖÃÃ»ÓĞÏß³Ì¸ôÀëºÍ¶ÏÂ·Æ÷µÄ×ÔÎÒ±£»¤¹¦ÄÜ£¬²»ÍÆ¼öÊ¹ÓÃ
+      # ?:åŒ¹é…ä»»æ„å•ä¸ªæ•°é‡å­—ç¬¦ï¼›*ï¼šåŒ¹é…ä»»æ„å¤šä¸ªæ•°é‡å­—ç¬¦ï¼›**ï¼šåŒ¹é…ä»»æ„å¤šä¸ªæ•°é‡å­—ç¬¦ï¼Œæ”¯æŒå¤šçº§ç›®å½•
+      # ä½¿ç”¨ url çš„é…ç½®æ²¡æœ‰çº¿ç¨‹éš”ç¦»å’Œæ–­è·¯å™¨çš„è‡ªæˆ‘ä¿æŠ¤åŠŸèƒ½ï¼Œä¸æ¨èä½¿ç”¨
       path: /client-1/**
       url: http://localhost:2222/
-      # Ãô¸ĞÍ·ĞÅÏ¢ÉèÖÃÎª¿Õ£¬±íÊ¾²»¹ıÂËÃô¸ĞÍ·ĞÅÏ¢£¬ÔÊĞíÃô¸ĞÍ·ĞÅÏ¢ÉøÍ¸µ½ÏÂÓÎ·şÎñÆ÷
+      # æ•æ„Ÿå¤´ä¿¡æ¯è®¾ç½®ä¸ºç©ºï¼Œè¡¨ç¤ºä¸è¿‡æ»¤æ•æ„Ÿå¤´ä¿¡æ¯ï¼Œå…è®¸æ•æ„Ÿå¤´ä¿¡æ¯æ¸—é€åˆ°ä¸‹æ¸¸æœåŠ¡å™¨
       sensitiveHeaders: ""
       customSensitiveHeaders: true
     client-2:
@@ -16,24 +16,24 @@ zuul:
     cloud-eureka-client: /client-3/**
     client-4:
       path: /client-4/**
-      # ÇëÇó×ª·¢ ¡ª¡ª ½öÏŞ×ª·¢µ½±¾µØ½Ó¿Ú
+      # è¯·æ±‚è½¬å‘ â€”â€” ä»…é™è½¬å‘åˆ°æœ¬åœ°æ¥å£
       url: forward:/local
 
-  # Zuul ½«¶ÔËùÓĞµÄ·şÎñ¶¼²»×Ô¶¯´´½¨Â·ÓÉ¹æÔò
+  # Zuul å°†å¯¹æ‰€æœ‰çš„æœåŠ¡éƒ½ä¸è‡ªåŠ¨åˆ›å»ºè·¯ç”±è§„åˆ™
   ignored-services: "*"
-  # ¶ÔÄ³Ğ© url ÉèÖÃ²»¾­¹ıÂ·ÓÉÑ¡Ôñ
+  # å¯¹æŸäº› url è®¾ç½®ä¸ç»è¿‡è·¯ç”±é€‰æ‹©
   ignored-patterns: {"/**/world/**","/**/zuul/**"}
-  # Spring Cloud ZuulÔÚÇëÇóÂ·ÓÉÊ±£¬»á¹ıÂËµô HTTP ÇëÇóÍ·£¨Cookie¡¢Set-Cookie¡¢Authorization£©ĞÅÏ¢ÖĞµÄÒ»Ğ©Ãô¸ĞĞÅÏ¢£¬
+  # Spring Cloud Zuulåœ¨è¯·æ±‚è·¯ç”±æ—¶ï¼Œä¼šè¿‡æ»¤æ‰ HTTP è¯·æ±‚å¤´ï¼ˆCookieã€Set-Cookieã€Authorizationï¼‰ä¿¡æ¯ä¸­çš„ä¸€äº›æ•æ„Ÿä¿¡æ¯ï¼Œ
   sensitive-headers: {"Cookie", "Set-Cookie", "Authorization"}
-  # Íø¹ØÔÚ½øĞĞÂ·ÓÉ×ª·¢Ê±ÎªÇëÇóÉèÖÃ Host Í·ĞÅÏ¢£¨±£³ÖÔÚÂ·ÓÉ×ª·¢¹ı³ÌÖĞ host Í·ĞÅÏ¢²»±ä£©
+  # ç½‘å…³åœ¨è¿›è¡Œè·¯ç”±è½¬å‘æ—¶ä¸ºè¯·æ±‚è®¾ç½® Host å¤´ä¿¡æ¯ï¼ˆä¿æŒåœ¨è·¯ç”±è½¬å‘è¿‡ç¨‹ä¸­ host å¤´ä¿¡æ¯ä¸å˜ï¼‰
   add-host-header: true
-  # ÇëÇó×ª·¢Ê±¼ÓÉÏ X-Forwarded-*Í·Óò
+  # è¯·æ±‚è½¬å‘æ—¶åŠ ä¸Š X-Forwarded-*å¤´åŸŸ
   add-proxy-headers: true
-  # ÊÇ·ñ¿ªÆôÖØÊÔ£¬Ä¬ÈÏ¹Ø±Õ
+  # æ˜¯å¦å¼€å¯é‡è¯•ï¼Œé»˜è®¤å…³é—­
   retryable: true
-  # Í¨¹ı /zuul Â·¾¶·ÃÎÊµÄÇëÇó»áÈÆ¹ı dispatcherServlet, ±» Zuu1Servlet ´¦Àí£¬Ö÷ÒªÓÃÀ´Ó¦¶Ô´¦Àí´óÎÄ¼şÉÏ´«µÄÇé¿ö¡£
+  # é€šè¿‡ /zuul è·¯å¾„è®¿é—®çš„è¯·æ±‚ä¼šç»•è¿‡ dispatcherServlet, è¢« Zuu1Servlet å¤„ç†ï¼Œä¸»è¦ç”¨æ¥åº”å¯¹å¤„ç†å¤§æ–‡ä»¶ä¸Šä¼ çš„æƒ…å†µã€‚
   servlet-path: /zuul
-  # ½ûÓÃÄ³¸ö¹ıÂËÆ÷ zuul.<SimpleClassName>.<filterTye>.disable=true
+  # ç¦ç”¨æŸä¸ªè¿‡æ»¤å™¨ zuul.<SimpleClassName>.<filterTye>.disable=true
   TokenFilter:
     pre:
       disable: true
